--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mfdj/regsexy",
-    "description": "^stylish (RegEx|RegExp|Regular Expressions) in PHP$",
+    "description": "Simple, fluent interface for the preg_* functions. Object oriented, readable regular expressions.",
     "license": "Creative Commons Attribution-ShareAlike 3.0 Unported License",
     "authors": [
         {
@@ -12,7 +12,7 @@
         "php": "~5.3"
     },
     "require-dev": {
-        "mfdj/fluenthtml": "@stable"
+        "mfdj/fluenthtml": "~0.1"
     },
     "autoload": {
         "psr-0": {
