--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: php
 
 php:
+  - 5.6
   - 5.5
   - 5.4
   - 5.3
+  - hhvm
 
-#before_script:
-#    - wget http://getcomposer.org/composer.phar
-#    - php composer.phar install
+before_script:
+    - composer install --prefer-source
 
-#script: phpunit tests
+script:
+    - phpunit --coverage-clover=coverage.clover
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
