--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 #  - 5.4
 
 before_script:
-    - composer install --prefer-source
+    - composer install --prefer-source --no-dev
 
 script:
     - phpunit --coverage-clover=coverage.clover
